@@ -3,12 +3,13 @@ Hash: SHA1
 
 EBUILD emacs-vcs-23.3.9999.ebuild 10450 RMD160 dfb8831d42395e9b43596e952fa0cb96e4d26062 SHA1 05aa204f10721b08ad8bcfd243b16ff2401bab4d SHA256 fafed8dfb9cb85062a7962e087c1cfbcdc167f3d9bc5fe7b6974f598a71a6a04
 EBUILD emacs-vcs-24.0.9999-r1.ebuild 10586 RMD160 272e292b8bd8caecc0600eb4eaa15f1196418f1f SHA1 f8662ebfa6f37abc4606b010819cfc8f42ec1989 SHA256 b115cede392560400b906232f8369546254b295b0f6b63af722394525b47df79
-MISC ChangeLog 2529 RMD160 5196b84fc4e0ac1aed4ac177cb3f6be94eba7935 SHA1 c61177a3a645d40e9780d8cbe6ee219665b58101 SHA256 76256368bc5f48cbda803bfdb5bbb726d33a6ddcb56010888f9b3b244a58bf32
+EBUILD emacs-vcs-24.0.9999-r2.ebuild 10612 RMD160 7fd5a1385108d03be8c8cb026aac2ccd2962293a SHA1 fe12395374f016c3e39457b391111e3a2cab3cac SHA256 2e879bcb52cbef733d34518e2e7e31bb169beffb03a61bb01c26ba851a7d2f87
+MISC ChangeLog 2720 RMD160 59fade36e203a8b037fa50a6b5e673ad04bde729 SHA1 84a7f4472bdd6a04ba4ef8b6ce1a2881aa1001c4 SHA256 340d4f045b63fa552191fd9909eae3c38f9840b927248c9e7a91258e942c2648
 MISC metadata.xml 1801 RMD160 606c780a3e86f485699157f14a35ca0e5da1d3c2 SHA1 05839ee25c6f6389e8eb80d783df895d59600a90 SHA256 bdc233a1795f52900dbe4d0a39c0e56d4eb5ba1c4842b9c46bae47f7052d5d74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1tJu0ACgkQOeoy/oIi7uyjPACfVXeuojuF4L8ocO3s3b25bVG2
-UhoAoKbG77TkXPjiAbQIMI2zf2KHx7z/
-=19d2
+iEYEARECAAYFAk1xUggACgkQOeoy/oIi7uzJqgCg610svXRFkhsGe4lA9Fdn5ofU
+1i4AoMEga409uP3UtgPPG+eMGYa3XHUk
+=+JXR
 -----END PGP SIGNATURE-----
