@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-vcs-24.0.9999-r2 (04 Mar 2011)
+
+  04 Mar 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r2.ebuild:
+  Try linking against Xaw3dxft for utf-8 font support in Xaw3d widgets.
+
 *emacs-vcs-23.3.9999 (01 Mar 2011)
 
   01 Mar 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-vcs-23.2.9999-r1.ebuild,
